# cpp-with-rust

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs
include/: multibuf.h
src/: lib.rs  main.cpp  multibuf.cpp
